fix: override sweet alert overflow to make sure tablet can see all alert content

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -105,3 +105,9 @@ main {
     }
   }
 }
+
+body {
+  &.swal2-shown {
+    overflow-y: auto !important;
+  }
+}
